Fix alignment of container

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    width: 100vh;
+    /* width: 100vh; */
     height: 100vh;
 }
 
